--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@
     <title>REstate</title>
   </head>
   <body>
-    <div>
-      <h1>REstate website</h1>
-
-      <div class="card">Card component</div>
-      <a href="#" class="btn btn-primary btn-outline">Button component</a>
+    <!--Header Navigation-->
+    <div class="navigation py-1">
+      <div class="container flex">
+        <h2><i class="fas fa-home"></i> REstate</h2>
+        <nav>
+          <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Properties</a></li>
+          </ul>
+        </nav>
+        <a href="#" class="btn btn-primary">Login</a>
+      </div>
     </div>
 
     <script src="./app.js" />
