--- a/index.html
+++ b/index.html
@@ -28,9 +28,21 @@
             <li><a href="#">Properties</a></li>
           </ul>
         </nav>
-        <a href="#" class="btn btn-primary">Login</a>
+        <a href="#" class="btn btn-primary">Log in</a>
       </div>
     </div>
+
+    <!--Showcase-->
+    <section class="showcase py-1">
+      <div class="container flex">
+        <div class="showcase-text">
+          <h1 class="md">
+            Lorem ipsum dolor sit amet consectetur adipisicing.
+          </h1>
+          <a href="#" class="btn btn-primary">Sign Up</a>
+        </div>
+      </div>
+    </section>
 
     <script src="./app.js" />
   </body>
