--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Header Navigation-->
     <div class="navigation py-1">
       <div class="container flex">
-        <h2><i class="fas fa-home"></i> REstate</h2>
+        <h2><i class="fas fa-home"></i> restate</h2>
         <nav>
           <ul class="menu">
             <li><a href="#">Home</a></li>
@@ -40,6 +40,32 @@
             Lorem ipsum dolor sit amet consectetur adipisicing.
           </h1>
           <a href="#" class="btn btn-primary">Sign Up</a>
+        </div>
+      </div>
+    </section>
+
+    <!--About-->
+    <section class="about py-1">
+      <div class="container grid">
+        <div class="about-img">
+          <img src="/images/about-img.jpg" alt="" />
+        </div>
+        <div class="about-text">
+          <p class="leader text-primary">About</p>
+          <h2 class="md text-focused">We provide the best property for you!</h2>
+          <p class="lead">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione,
+            accusamus?
+          </p>
+          <p class="lead">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione,
+            accusamus?
+          </p>
+          <p class="lead">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione,
+            accusamus?
+          </p>
+          <a href="#" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     </section>
