--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/utilities.css" />
+    <link rel="stylesheet" href="./css/media-queries.css" />
     <title>REstate</title>
   </head>
   <body>
     <!--Header Navigation-->
     <div class="navigation py-1">
-      <div class="container flex">
+      <div class="container flex align-center">
         <h2><i class="fas fa-home"></i> restate</h2>
         <nav>
           <ul class="menu">
@@ -28,13 +29,13 @@
             <li><a href="#">Properties</a></li>
           </ul>
         </nav>
-        <a href="#" class="btn btn-primary">Log in</a>
+        <a href="login.html" class="btn btn-primary">Log in</a>
       </div>
     </div>
 
     <!--Showcase-->
     <section class="showcase py-1">
-      <div class="container flex">
+      <div class="container flex full-height align-center">
         <div class="showcase-text">
           <h1 class="md">
             Lorem ipsum dolor sit amet consectetur adipisicing.
