fix signup margin and add login button to mobile navigation

--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,7 @@
       </div>
       <h2>Sign up</h2>
       <form class="flex flex-column align-center login-form" action="POST">
-        <input class="bg-light" type="text" placeholder="first name*" />
+        <input class="my-1 bg-light" type="text" placeholder="first name*" />
         <input class="my-1 bg-light" type="text" placeholder="last name*" />
         <input class="my-1 bg-light" type="email" placeholder="email*" />
         <input class="my-1 bg-light" type="text" placeholder="username*" />
