--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#">Properties</a></li>
           </ul>
         </nav>
@@ -43,7 +43,7 @@
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#">Properties</a></li>
             <li><a href="/login.html" class="btn btn-primary">Log In</a></li>
           </ul>
