--- a/signup.html
+++ b/signup.html
@@ -58,15 +58,40 @@
         <i class="fas fa-lock"></i>
       </div>
       <h2>Sign up</h2>
-      <form class="flex flex-column align-center login-form" action="POST">
-        <input class="bg-light" type="text" placeholder="first name*" />
-        <input class="my-1 bg-light" type="text" placeholder="last name*" />
-        <input class="my-1 bg-light" type="email" placeholder="email*" />
-        <input class="my-1 bg-light" type="text" placeholder="username*" />
-        <input class="my-1 bg-light" type="password" placeholder="last name*" />
+      <form id="signup" class="flex flex-column align-center login-form">
+        <input
+          id="firstName"
+          class="bg-light"
+          type="text"
+          placeholder="first name*"
+        />
+        <input
+          id="lastName"
+          class="my-1 bg-light"
+          type="text"
+          placeholder="last name*"
+        />
+        <input
+          id="email"
+          class="my-1 bg-light"
+          type="email"
+          placeholder="email*"
+        />
+        <input
+          id="username"
+          class="my-1 bg-light"
+          type="text"
+          placeholder="username*"
+        />
+        <input
+          id="password"
+          class="my-1 bg-light"
+          type="password"
+          placeholder="password*"
+        />
         <button class="btn" type="submit">Sign up</button>
       </form>
     </div>
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
