fix import outisde module error, add login button to mobile navigation on all screens

--- a/login.html
+++ b/login.html
@@ -46,6 +46,7 @@
             <li><a href="#">About Us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Properties</a></li>
+            <li><a href="/login.html" class="btn btn-primary">Log In</a></li>
           </ul>
         </nav>
       </div>
