--- a/services.html
+++ b/services.html
@@ -46,6 +46,7 @@
             <li><a href="#">About Us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Properties</a></li>
+            <li><a href="/login.html" class="btn btn-primary">Log In</a></li>
           </ul>
         </nav>
       </div>
@@ -95,6 +96,6 @@
       </div>
     </section>
 
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
