--- a/index.html
+++ b/index.html
@@ -89,6 +89,46 @@
       </div>
     </section>
 
+    <!--Footer-->
+    <footer class="footer bg-primary">
+      <div class="container py-4 flex justify-space-between">
+        <div class="footer-logo">
+          <h2 class="md">restate</h2>
+        </div>
+        <div class="footer-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Properties</a></li>
+          </ul>
+        </div>
+        <div class="footer-locations">
+          <h3>Locations</h3>
+          <ul>
+            <li><p>Prishtina</p></li>
+            <li><p>Tirana</p></li>
+            <li><p>Skopje</p></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h3>Contact</h3>
+          <ul>
+            <li><p>+38344777777</p></li>
+            <li><p>info@restate.com</p></li>
+            <div class="social-icons">
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-instagram"></i>
+            </div>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright text-center">
+        <p>All rights reserved &copy; restate 2021</p>
+      </div>
+    </footer>
+
     <script type="module" src="./app.js" />
   </body>
 </html>
