--- a/index.html
+++ b/index.html
@@ -89,6 +89,51 @@
       </div>
     </section>
 
+    <!--Cards-->
+    <section class="properties py-1">
+      <div class="container grid grid-3 justify-space-between">
+        <div class="card">
+          <img src="images/about-img.jpg" alt="">
+          <p class="text-right">$19.99</p>
+          <div class="flex justify-space-between">
+            <div class="card-title">
+              <h4>The Palace</h4>
+              <h6>London, UK</h6>
+            </div>
+            <div class="card-icons">
+              <p>5 , 2</p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/about-img.jpg" alt="">
+          <p class="text-right">$19.99</p>
+          <div class="flex justify-space-between">
+            <div class="card-title">
+              <h4>The Palace</h4>
+              <h6>London, UK</h6>
+            </div>
+            <div class="card-icons">
+              <p>5 , 2</p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/about-img.jpg" alt="">
+          <p class="text-right">$19.99</p>
+          <div class="flex justify-space-between">
+            <div class="card-title">
+              <h4>The Palace</h4>
+              <h6>London, UK</h6>
+            </div>
+            <div class="card-icons">
+              <p>5 , 2</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!--Footer-->
     <footer class="footer bg-primary">
       <div class="container py-4 flex justify-space-between">
