Added card text

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
 
     <!--Cards-->
     <section class="properties py-1">
+      <div class="card-text text-center">
+        <p class="lead text-primary">Recent</p>
+        <h1 class="text-focused">Our Featured Properties</h1>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, necessitatibus?</p>
+      </div>
       <div class="container grid grid-3 justify-space-between">
         <div class="card">
           <img src="images/about-img.jpg" alt="">
