card styling and icons

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <img src="/images/about-img.jpg" alt="" />
         </div>
         <div class="about-text">
-          <p class="leader text-primary">About</p>
+          <p class="lead text-primary">About</p>
           <h2 class="md text-focused">We provide the best property for you!</h2>
           <p class="lead">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione,
@@ -91,48 +91,54 @@
 
     <!--Cards-->
     <section class="properties py-1">
-      <div class="card-text text-center">
+      <div class="card-text text-center py-1">
         <p class="lead text-primary">Recent</p>
         <h1 class="text-focused">Our Featured Properties</h1>
-        <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, necessitatibus?</p>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br />Quas,
+          necessitatibus?
+        </p>
       </div>
-      <div class="container grid grid-3 justify-space-between">
+      <div class="container grid grid-3">
         <div class="card">
-          <img src="images/about-img.jpg" alt="">
+          <img src="images/about-img.jpg" alt="" />
           <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between">
+          <div class="flex justify-space-between align-items-center">
             <div class="card-title">
               <h4>The Palace</h4>
               <h6>London, UK</h6>
             </div>
-            <div class="card-icons">
-              <p>5 , 2</p>
+            <div class="card-icons flex">
+              <p><i class="fas fa-sink"></i> 5</p>
+              <p><i class="fas fa-bed"></i> 2</p>
             </div>
           </div>
         </div>
         <div class="card">
-          <img src="images/about-img.jpg" alt="">
+          <img src="images/about-img.jpg" alt="" />
           <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between">
+          <div class="flex justify-space-between align-items-center">
             <div class="card-title">
               <h4>The Palace</h4>
               <h6>London, UK</h6>
             </div>
-            <div class="card-icons">
-              <p>5 , 2</p>
+            <div class="card-icons flex">
+              <p><i class="fas fa-sink"></i> 5</p>
+              <p><i class="fas fa-bed"></i> 2</p>
             </div>
           </div>
         </div>
         <div class="card">
-          <img src="images/about-img.jpg" alt="">
+          <img src="images/about-img.jpg" alt="" />
           <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between">
+          <div class="flex justify-space-between align-items-center">
             <div class="card-title">
               <h4>The Palace</h4>
               <h6>London, UK</h6>
             </div>
-            <div class="card-icons">
-              <p>5 , 2</p>
+            <div class="card-icons flex">
+              <p><i class="fas fa-sink"></i> 5</p>
+              <p><i class="fas fa-bed"></i> 2</p>
             </div>
           </div>
         </div>
