--- a/login.html
+++ b/login.html
@@ -25,9 +25,8 @@
         <nav>
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Properties</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="properties.html">Properties</a></li>
           </ul>
         </nav>
         <a href="login.html" class="btn btn-primary">Log in</a>
@@ -43,9 +42,8 @@
         <nav class="card">
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Properties</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="properties.html">Properties</a></li>
             <li><a href="/login.html" class="btn btn-primary">Log In</a></li>
           </ul>
         </nav>
