--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
     <!--About-->
-    <section class="about py-1">
+    <section class="about py-2">
       <div class="container grid">
         <div class="about-img">
           <img src="/images/about-img.jpg" alt="" />
@@ -82,61 +82,62 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione,
             accusamus?
           </p>
-          <a href="#" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     </section>
 
     <!--Cards-->
     <section class="properties py-1">
-      <div class="card-text text-center py-1">
-        <p class="lead text-primary">Recent</p>
-        <h1 class="text-focused">Our Featured Properties</h1>
-        <p class="lead">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br />Quas,
-          necessitatibus?
-        </p>
-      </div>
-      <div class="container grid grid-3">
-        <div class="card">
-          <img src="images/about-img.jpg" alt="" />
-          <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between align-items-center">
-            <div class="card-title">
-              <h4>The Palace</h4>
-              <h6>London, UK</h6>
-            </div>
-            <div class="card-icons flex">
-              <p><i class="fas fa-sink"></i> 5</p>
-              <p><i class="fas fa-bed"></i> 2</p>
+      <div class="container">
+        <div class="card-text text-center py-1">
+          <p class="lead text-primary">Recent</p>
+          <h1 class="text-focused">Our Featured Properties</h1>
+          <p class="lead">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            <br />Quas, necessitatibus?
+          </p>
+        </div>
+        <div class="grid grid-3">
+          <div class="card">
+            <img src="images/properties/house-2.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>Toronto, CA</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="images/about-img.jpg" alt="" />
-          <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between align-items-center">
-            <div class="card-title">
-              <h4>The Palace</h4>
-              <h6>London, UK</h6>
-            </div>
-            <div class="card-icons flex">
-              <p><i class="fas fa-sink"></i> 5</p>
-              <p><i class="fas fa-bed"></i> 2</p>
+          <div class="card">
+            <img src="images/properties/house-3.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>London, UK</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="images/about-img.jpg" alt="" />
-          <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between align-items-center">
-            <div class="card-title">
-              <h4>The Palace</h4>
-              <h6>London, UK</h6>
-            </div>
-            <div class="card-icons flex">
-              <p><i class="fas fa-sink"></i> 5</p>
-              <p><i class="fas fa-bed"></i> 2</p>
+          <div class="card">
+            <img src="images/properties/house-4.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>New York, US</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
             </div>
           </div>
         </div>
