--- a/properties.html
+++ b/properties.html
@@ -73,54 +73,97 @@
 
     <!--Cards-->
     <section class="properties py-1">
-      <div class="card-text text-center py-1">
-        <p class="lead text-primary">Results</p>
-        <h1 class="text-focused">Our Featured Properties</h1>
-        <p class="lead">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br />Quas,
-          necessitatibus?
-        </p>
-      </div>
-      <div class="container grid grid-3">
-        <div class="card">
-          <img src="images/about-img.jpg" alt="" />
-          <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between align-items-center">
-            <div class="card-title">
-              <h4>The Palace</h4>
-              <h6>London, UK</h6>
-            </div>
-            <div class="card-icons flex">
-              <p><i class="fas fa-sink"></i> 5</p>
-              <p><i class="fas fa-bed"></i> 2</p>
+      <div class="container">
+        <div class="card-text text-center py-1">
+          <p class="lead text-primary">Properties</p>
+          <p class="lead">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            <br />Quas, necessitatibus?
+          </p>
+        </div>
+        <div class="grid grid-3">
+          <div class="card">
+            <img src="images/properties/house-1.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>London, UK</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="images/about-img.jpg" alt="" />
-          <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between align-items-center">
-            <div class="card-title">
-              <h4>The Palace</h4>
-              <h6>London, UK</h6>
-            </div>
-            <div class="card-icons flex">
-              <p><i class="fas fa-sink"></i> 5</p>
-              <p><i class="fas fa-bed"></i> 2</p>
+          <div class="card">
+            <img src="images/properties/house-2.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>Toronto, CA</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="images/about-img.jpg" alt="" />
-          <p class="text-right">$19.99</p>
-          <div class="flex justify-space-between align-items-center">
-            <div class="card-title">
-              <h4>The Palace</h4>
-              <h6>London, UK</h6>
+          <div class="card">
+            <img src="images/properties/house-3.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>London, UK</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
             </div>
-            <div class="card-icons flex">
-              <p><i class="fas fa-sink"></i> 5</p>
-              <p><i class="fas fa-bed"></i> 2</p>
+          </div>
+          <div class="card">
+            <img src="images/properties/house-4.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>New York, US</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/properties/house-5.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>London, UK</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/properties/house-6.jpg" alt="" />
+            <p class="text-right">$100.000</p>
+            <div class="flex justify-space-between align-items-center">
+              <div class="card-title">
+                <h4>The Palace</h4>
+                <h6>London, UK</h6>
+              </div>
+              <div class="card-icons flex">
+                <p><i class="fas fa-bed"></i> 5</p>
+                <p><i class="fas fa-sink"></i> 2</p>
+              </div>
             </div>
           </div>
         </div>
