--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </p>
         </div>
         <div class="grid grid-3">
-          <div class="card">
+          <a href="property.html" class="card">
             <img src="images/properties/house-2.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -111,8 +111,8 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
-          <div class="card">
+          </a>
+          <a href="property.html" class="card">
             <img src="images/properties/house-3.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -125,8 +125,8 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
-          <div class="card">
+          </a>
+          <a href="property.html" class="card">
             <img src="images/properties/house-4.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -139,7 +139,7 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
@@ -153,9 +153,9 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Properties</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/services.html">Services</a></li>
+            <li><a href="/properties.html">Properties</a></li>
           </ul>
         </div>
         <div class="footer-locations">
