--- a/properties.html
+++ b/properties.html
@@ -82,7 +82,7 @@
           </p>
         </div>
         <div class="grid grid-3">
-          <div class="card">
+          <a class="card" href="/property.html">
             <img src="images/properties/house-1.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -95,8 +95,8 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
-          <div class="card">
+          </a>
+          <a href="property.html" class="card">
             <img src="images/properties/house-2.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -109,8 +109,8 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
-          <div class="card">
+          </a>
+          <a href="property.html" class="card">
             <img src="images/properties/house-3.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -123,8 +123,8 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
-          <div class="card">
+          </a>
+          <a href="property.html" class="card">
             <img src="images/properties/house-4.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -137,8 +137,8 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
-          <div class="card">
+          </a>
+          <a href="property.html" class="card">
             <img src="images/properties/house-5.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -151,8 +151,8 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
-          <div class="card">
+          </a>
+          <a href="/property.html" class="card">
             <img src="images/properties/house-6.jpg" alt="" />
             <p class="text-right">$100.000</p>
             <div class="flex justify-space-between align-items-center">
@@ -165,7 +165,7 @@
                 <p><i class="fas fa-sink"></i> 2</p>
               </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
@@ -179,9 +179,9 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Properties</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/services.html">Services</a></li>
+            <li><a href="/properties.html">Properties</a></li>
           </ul>
         </div>
         <div class="footer-locations">
