--- a/services.html
+++ b/services.html
@@ -103,9 +103,9 @@
         <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Properties</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/services.html">Services</a></li>
+            <li><a href="/properties.html">Properties</a></li>
           </ul>
         </div>
         <div class="footer-locations">
