--- a/property.html
+++ b/property.html
@@ -180,6 +180,7 @@
       </div>
     </footer>
 
-    <script type="module" src="./app.js" />
+    <script type="module" src="./app.js"></script>
+    <script type="text/javascript" src="/js/carousel.js"></script>
   </body>
 </html>
