--- a/index.html
+++ b/index.html
@@ -184,6 +184,6 @@
       </div>
     </footer>
 
-    <script type="module" src="./app.js" />
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
