--- a/properties.html
+++ b/properties.html
@@ -209,6 +209,6 @@
         <p>All rights reserved &copy; restate 2021</p>
       </div>
     </footer>
-    <script type="module" src="/app.js" />
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
